
Bugfixes:

- The OpenMP detection now additionally checks for the `-fiopenmp` flag
  used by Intel oneAPI.
- The OMPT adapter now aborts when it detects non-conforming OpenMP
  behavior observed with runtimes that don't support OMPT target
  callbacks (here, helper threads are created that lack thread-begin
  and implicit-task-begin but dispatch parallel-begin).

------------------- Released version 8.1 -----------------------------

Bugfixes:

- Score-P now gracefully handles undefined behavior exploited by the
  application when using the Pthread API instead of aborting the
  application.
- Allow to build against LLVM's libunwind.
- Fix segmentation fault when trying to parse certain function names.
- Fix segmentation fault when executing OpenMP target regions on the
  host.
- Score-P records program arguments again. The feature was disabled due
  to issues on some HPC systems. Please report if there are any issues
  again.
- Support for OpenMP's tool interface OMPT will be disabled if
  configure detects shortcomings of the OpenMP runtime that cannot be
  worked around. The reason will be reported in the configure summary.
- Fix the primary output of scorep-score by keeping it strictly human
  readable. Additional escaping of special characters for filterable
  region types is enabled for the `-m` option for regions without a
  mangled name.
- Prevent deadlock in the Kokkos adapter when using in an inhomogeneous
  multi-process GPU setup.
- Downloaded external libraries (--with-libbfd|libunwind=download) are
  now being installed into lib, even if the system preference is to
  install under lib64 (e.g., for SUSE systems). This guarantees
  picking up the donwloaded installation of these libraries.
- Add C wrappers for `MPI_Info_get_nkeys` and `MPI_Info_get_nthkey` to the
  MPI adapter.

------------------- Released version 8.0 -----------------------------

Major features:

- Add support to record CUDA NVTX instrumentation.